[gd_scene load_steps=2 format=3 uid="uid://dvduerfnq7pg1"]

[ext_resource type="Script" path="res://InterfaceComponents/GameplayUI/gameplay_ui.gd" id="1_six2m"]

[node name="GameplayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_six2m")

[node name="LevelProgress" type="ProgressBar" parent="."]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 40.0
value = 25.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 700.0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="SlainCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 41.0
offset_right = 139.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 35
text = "ENEMIES SLAIN: 0"

[node name="TimeCounter" type="Label" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 41.0
offset_right = 936.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 35
text = "00:00
"

[node name="LevelDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_bottom = 49.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 35
text = "Lv.1"
